fix: overlapping in tags and creation buttons

--- a/src/app/collections/components/creation-buttons/creation-buttons.component.css
+++ b/src/app/collections/components/creation-buttons/creation-buttons.component.css
@@ -14,5 +14,6 @@ button{
   position: fixed;
   bottom: 0;
   right: 0;
+  z-index: 1000;
 
 }
